# ssh-stamp

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  SECURITY.md  build.rs  partitions.csv  rust-toolchain.toml  ssh-stamp.cdx.json  ssh-stamp.cdx.xml
.cargo/: config.toml
.github/workflows/: build.yml  release.yml  tests.yml
.reuse/: dep5
LICENSES/: Apache-2.0.txt  CC-BY-4.0.txt
docs/: ARCHITECTURE.md  audit.md  esp-ssh-rs.cdx.json  nlnet_grant_application.md
docs/book/src/: chapter_2.md
docs/nlnet/: gantt.md  grant_proposal.md  grant_second_round.md  mou.md  plan.md
hal/: Cargo.toml
hal-espressif/: Cargo.toml
hal-espressif/src/: config.rs  executor.rs  flash.rs  hash.rs  lib.rs  rng.rs  timer.rs  uart.rs
hal-espressif/src/network/: mod.rs  wifi.rs
hal/src/: config.rs  error.rs  lib.rs
hal/src/traits/: executor.rs  flash.rs  hash.rs  mod.rs  rng.rs  timer.rs  uart.rs
hal/src/traits/network/: ethernet.rs  mod.rs  wifi.rs
hil/serial-by-function/: README.md  example_map.conf  install_serials_by_function.sh  uninstall_serials_by_function.sh
hil/serial-by-function/scripts/: link_serials.sh
ota/: Cargo.toml  README.md  ota.cdx.json  ota.cdx.xml  test-hil-esp32c6-e2e.sh
ota/.cargo/: config.toml
ota/src/: handler.rs  lib.rs  otatraits.rs  sftpserver.rs  storagetraits.rs  target.rs  tlv.rs  traits.rs
scripts/: client.sh
src/: app.rs  config.rs  config_storage.rs  errors.rs  esp_net.rs  esp_rng.rs  esp_serial.rs  global.rs  handle.rs  io.rs  keys.rs  lib.rs  main.rs  ota.rs  pins.rs  platform.rs  serial.rs  serve.rs  settings.rs  storage.rs  store.rs  takepipe.rs
src/common/: Cargo.toml
src/common/src/: config.rs  lib.rs  serve.rs  takepipe.rs
src/espressif/: buffered_uart.rs  hash.rs  mod.rs  net.rs  rng.rs  serial.rs
src/fsm/: app.rs
ssh-stamp-esp32/: Cargo.toml  build.rs
ssh-stamp-esp32-boards/: Cargo.toml  build.rs
ssh-stamp-esp32-boards/boards/: esp32-s2-saola.toml  esp32c5-devkitc.toml  esp32c6-devkitc.toml  esp32c6-generic.toml  esp32c61-devkitc.toml
ssh-stamp-esp32-boards/src/: esp32_s2_saola.rs  esp32c6_devkitc.rs  esp32c6_generic.rs  lib.rs
ssh-stamp-esp32/src/: config.rs  flash.rs  hash.rs  lib.rs  platform.rs  rng.rs  timer.rs  uart.rs
ssh-stamp-esp32/src/network/: mod.rs  wifi.rs
ssh-stamp-hal/: Cargo.toml
ssh-stamp-hal/src/: config.rs  error.rs  lib.rs
ssh-stamp-hal/src/traits/: flash.rs  hash.rs  mod.rs  rng.rs  timer.rs  uart.rs
ssh-stamp-hal/src/traits/network/: mod.rs  provider.rs  wifi.rs
storage/: Cargo.toml  storage.cdx.json  storage.cdx.xml
storage/src/: esp.rs  esp_ota.rs  lib.rs
