# SPDX-FileCopyrightText: 2025 Roman Valls, 2025
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "ssh-stamp"
version = "0.1.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace]
members = ["ota", "storage"]
exclude = ["tests-std"]

[workspace.dependencies]
sunset = { git = "https://github.com/jubeormk1/sunset", branch = "dev/sftp-start", default-features = false, features = [
    "openssh-key",
    "embedded-io",
] }
sunset-async = { git = "https://github.com/jubeormk1/sunset", branch = "dev/sftp-start", default-features = false, features = [
    "multi-thread",
] }
sunset-sshwire-derive = { git = "https://github.com/jubeormk1/sunset", branch = "dev/sftp-start", default-features = false }
sunset-sftp = { git = "https://github.com/jubeormk1/sunset", branch = "dev/sftp-start", default-features = false }

sha2 = { version = "0.10", default-features = false }
rustc-hash = { version = "2.1", default-features = false } # For hash in the OTA SFTP server TODO: For the optimisation task: Remove this dependency and use sha2 instead?
log = "0.4"

esp-hal = { version = "1.0.0-beta.1", features = ["unstable"] }
embedded-storage = "0.3.1"
esp-storage = { version = "0.6" }
esp-bootloader-esp-idf = "0.1"

static_cell = { version = "2", features = ["nightly"] }
# Used for storage::flash singleton
once_cell = { version = "1", features = [
    "critical-section",
], default-features = false }

[dependencies]
ota = { path = "ota" }
storage = { path = "storage" }
sha2 = { workspace = true }
rustc-hash = { workspace = true }

cfg-if = "1"
ed25519-dalek = { version = "2", default-features = false }
embassy-executor = { version = "0.7" }
embassy-net = { version = "0.7", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
smoltcp = { version = "0.12", default-features = false, features = [
    "medium-ethernet",
    "socket-raw",
] }
embassy-time = { version = "0.4" }
embedded-io-async = "0.6"
esp-alloc = "0.8"
esp-backtrace = { version = "0.16", features = [
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { workspace = true }
esp-hal-embassy = { version = "0.8" }
esp-println = { version = "0.14", features = ["log-04"] }
esp-wifi = { version = "0.14", features = ["wifi", "esp-alloc"] }
hex = { version = "0.4", default-features = false }
log = { version = "0.4" }
static_cell = { workspace = true }
ssh-key = { version = "0.6", default-features = false, features = ["ed25519"] }
sunset = { workspace = true }
sunset-async = { workspace = true }
sunset-sshwire-derive = { workspace = true }
sunset-sftp = { workspace = true }
getrandom = { version = "0.2.10", features = ["custom"] }
embassy-sync = "0.7"
heapless = "0.8"
embassy-futures = "0.1.2"
edge-dhcp = "0.6"
edge-nal = "0.5"
edge-nal-embassy = "0.6"
#sequential-storage = { version = "4", features = ["heapless"] }
esp-storage = { workspace = true }
embedded-storage = { workspace = true }
embassy-embedded-hal = "0.3"
bcrypt = { version = "0.17", default-features = false }
subtle = { version = "2", default-features = false }
hmac = { version = "0.12", default-features = false }
# sha2 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false, features = [
    "rand_core",
    "subtle",
] }
embedded-storage-async = "0.4"
portable-atomic = "1"
esp-bootloader-esp-idf = { workspace = true }
snafu = { version = "0.8.6", default-features = false }
paste = "1"
pretty-hex = { version = "0.4", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 0
debug = 2
debug-assertions = true

[profile.release]
codegen-units = 1       # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = true

[profile.esp32s2]
inherits = "release"
opt-level = "s"      # Optimize for size.

[profile.dev.package.esp-storage]
opt-level = "s"

[profile.dev.package.esp-wifi]
opt-level = "s"

[features]
ipv6 = []
default = ["esp32c6"]
# MCU options
esp32 = [
    "esp-hal/esp32",
    "esp-backtrace/esp32",
    "esp-wifi/esp32",
    "esp-hal-embassy/esp32",
    "esp-println/esp32",
    "esp-storage/esp32",
    "embassy-executor/task-arena-size-40960",
]
esp32c2 = [
    "esp-hal/esp32c2",
    "esp-backtrace/esp32c2",
    "esp-wifi/esp32c2",
    "esp-hal-embassy/esp32c2",
    "esp-println/esp32c2",
    "esp-storage/esp32c2",
    "embassy-executor/task-arena-size-40960",
]
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-backtrace/esp32c3",
    "esp-wifi/esp32c3",
    "esp-hal-embassy/esp32c3",
    "esp-println/esp32c3",
    "esp-storage/esp32c3",
    "embassy-executor/task-arena-size-40960",
]
#esp32c5 = [
#    "esp-hal/esp32c5",
#    "esp-backtrace/esp32c5",
#    "esp-wifi/esp32c5",
#    "esp-hal-embassy/esp32c5",
#    "esp-println/esp32c5",
#    "esp-storage/esp32c5",
#    "embassy-executor/task-arena-size-40960",
#]
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-wifi/esp32c6",
    "esp-hal-embassy/esp32c6",
    "esp-println/esp32c6",
    "esp-storage/esp32c6",
    "embassy-executor/task-arena-size-40960",
]
esp32s2 = [
    "esp-hal/esp32s2",
    "esp-backtrace/esp32s2",
    "esp-wifi/esp32s2",
    "esp-hal-embassy/esp32s2",
    "esp-println/esp32s2",
    "esp-storage/esp32s2",
    "embassy-executor/task-arena-size-32768",
]
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-wifi/esp32s3",
    "esp-hal-embassy/esp32s3",
    "esp-println/esp32s3",
    "esp-storage/esp32s3",
    "embassy-executor/task-arena-size-40960",
]
