[package]
name = "ssh-stamp"
version = "0.2.0"
authors = [ "Julio Beltran Ortega <jubeormk1@gmail.com>",
            "Anthony Tambasco <anthony.tambasco@fastmail.com>",
            "Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = ["storage"]

[workspace.dependencies]
sha2 = { version = "0.10", default-features = false }
log = "0.4"

esp-hal = { version = "1.0.0", features = ["unstable", "log-04"] }
embedded-storage = "0.3.1"
esp-storage = { version = "0.8.0" }
esp-bootloader-esp-idf = { version = "0.4.0" }

sunset = { git = "https://github.com/mkj/sunset", default-features = false, features = ["openssh-key", "embedded-io"]}
sunset-async = { git = "https://github.com/mkj/sunset", default-features = false, features = ["multi-thread"]}
sunset-sshwire-derive = { git = "https://github.com/mkj/sunset", default-features = false }
# sunset = { path = "../sunset", default-features = false, features = ["openssh-key", "embedded-io"]}
# sunset-async = { path = "../sunset/async", default-features = false, features = ["multi-thread"]}
# sunset-sshwire-derive = { path = "../sunset/sshwire-derive", default-features = false }

static_cell = { version = "2" }
# Used for storage::flash singleton
once_cell = { version = "1", features = [
    "critical-section",
], default-features = false }


[dependencies]
storage = { path = "storage" }
cfg-if = "1"
ed25519-dalek = { version = "2", default-features = false }
embassy-executor = { version = "0.9"}
embassy-net = { version = "0.7", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
smoltcp = { version = "0.12", default-features = false, features = ["medium-ethernet", "socket-raw"]}
embassy-time = { version = "0.5" }
embedded-io-async = "0.6"
esp-alloc = "0.9"
esp-backtrace = { version = "0.18", features = [
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0", features = [ "unstable" ] }
#esp-hal-embassy = { version = "0.9" }
esp-println = { version = "0.16", features = ["log-04"]}
esp-radio = { version = "0.17", features = ["wifi"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "log-04", "esp-radio"] }
hex = { version = "0.4", default-features = false }
log = { version = "0.4" }
static_cell = { version = "2", features = ["nightly"] }
ssh-key = { version = "0.6", default-features = false, features = ["ed25519"] }
sunset = { workspace = true }
sunset-async = { workspace = true }
sunset-sshwire-derive = { workspace = true }
getrandom = { version = "0.2.10", features = ["custom"] }
embassy-sync = "0.7"
heapless = "0.8"
embassy-futures = "0.1"
edge-dhcp = "0.6"
edge-nal = "0.5"
edge-nal-embassy = "0.7"
#sequential-storage = { version = "4", features = ["heapless"] }
esp-storage = { version = "0.8" }
embedded-storage = "0.3"
embassy-embedded-hal = "0.5"
bcrypt = { version = "0.17", default-features = false }
subtle = { version = "2", default-features = false }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false, features = ["rand_core", "subtle"] }
embedded-storage-async = "0.4"
portable-atomic = "1"
esp-bootloader-esp-idf = { version = "0.4", features = ["esp-rom-sys"] }
snafu = { version = "0.8", default-features = false }
paste = "1"
pretty-hex = { version = "0.4", default-features = false }
esp-rom-sys = { version = "0.1" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 0
debug = 2
debug-assertions = true

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = true

[profile.esp32s2]
inherits = "release"
opt-level = "s"  # Optimize for size.

[profile.dev.package.esp-storage]
opt-level = "s"

[profile.dev.package.esp-radio]
opt-level = "s"

[features]
ipv6 = []
default = ["esp32c6"]
# MCU options
esp32 = [
    "esp-hal/esp32",
    "esp-backtrace/esp32",
    "esp-radio/esp32",
    "esp-rtos/esp32",
    "esp-alloc/esp32",
    "esp-rom-sys/esp32",
    "esp-bootloader-esp-idf/esp32",
    "esp-println/esp32",
    "esp-storage/esp32",
]
esp32c2 = [
    "esp-hal/esp32c2",
    "esp-backtrace/esp32c2",
    "esp-radio/esp32c2",
    "esp-rtos/esp32c2",
    "esp-alloc/esp32c2",
    "esp-rom-sys/esp32c2",
    "esp-bootloader-esp-idf/esp32c2",
    "esp-println/esp32c2",
    "esp-storage/esp32c2",
]
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-backtrace/esp32c3",
    "esp-radio/esp32c3",
    "esp-rtos/esp32c3",
    "esp-alloc/esp32c3",
    "esp-rom-sys/esp32c3",
    "esp-bootloader-esp-idf/esp32c3",
    "esp-println/esp32c3",
    "esp-storage/esp32c3",
]
#esp32c5 = [
#    "esp-hal/esp32c5",
#    "esp-backtrace/esp32c5",
#    "esp-radio/esp32c5",
#    "esp-hal-embassy/esp32c5",
#    "esp-println/esp32c5",
#    "esp-storage/esp32c5",
#    "embassy-executor/task-arena-size-40960",
#]
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-radio/esp32c6",
    "esp-rtos/esp32c6",
    "esp-alloc/esp32c6",
    "esp-rom-sys/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-println/esp32c6",
    "esp-storage/esp32c6",
]
esp32s2 = [
    "esp-hal/esp32s2",
    "esp-backtrace/esp32s2",
    "esp-radio/esp32s2",
    "esp-rtos/esp32s2",
    "esp-alloc/esp32s2",
    "esp-rom-sys/esp32s2",
    "esp-bootloader-esp-idf/esp32s2",
    "esp-println/esp32s2",
    "esp-storage/esp32s2",
]
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-radio/esp32s3",
    "esp-rtos/esp32s3",
    "esp-alloc/esp32s3",
    "esp-rom-sys/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-println/esp32s3",
    "esp-storage/esp32s3",
]
