# SPDX-FileCopyrightText: 2025 Roman Valls, 2025
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "ssh-stamp"
version = "0.3.0"
authors = [
    "Julio Beltran Ortega <jubeormk1@gmail.com>",
    "Anthony Tambasco <anthony.tambasco@fastmail.com>",
    "Roman Valls Guimera <brainstorm@nopcode.org>",
    "Marko Malenic <mmalenic1@gmail.com>",
]
edition = "2024"
license = "GPL-3.0-or-later"

[lib]

[workspace]
members = ["ssh-stamp-hal", "ssh-stamp-esp32", "ota"]

[workspace.lints.clippy]
mem_forget = "warn"
await_holding_lock = "warn"
pedantic = "warn"
large_futures = { level = "allow", priority = 1 }
default_trait_access = { level = "allow", priority = 1 }

[lints]
workspace = true

[workspace.dependencies]
# Async runtime
embassy-sync = "0.8"
embassy-executor = { version = "0.10" }
embassy-time = { version = "0.5" }
embassy-futures = "0.1.2"

# Collections
heapless = "0.9"

# ESP32
esp-hal = { version = "1.1", features = ["unstable", "log-04"] }

# SSH protocol
sunset = { git = "https://github.com/mkj/sunset", rev = "fd3f8284ebca704f3c3789faf80487af18a50114", default-features = false, features = [
    "openssh-key",
    "embedded-io",
] }
sunset-async = { git = "https://github.com/mkj/sunset", rev = "fd3f8284ebca704f3c3789faf80487af18a50114", default-features = false, features = [
    "multi-thread",
] }
sunset-sshwire-derive = { git = "https://github.com/mkj/sunset", rev = "fd3f8284ebca704f3c3789faf80487af18a50114", default-features = false }
sunset-sftp = { git = "https://github.com/mkj/sunset", rev = "fd3f8284ebca704f3c3789faf80487af18a50114", default-features = false }

# Crypto
sha2 = { version = "0.10", default-features = false }
rustc-hash = { version = "2.1", default-features = false }
bcrypt = { version = "0.17", default-features = false }
subtle = { version = "2", default-features = false }
hmac = { version = "0.12", default-features = false }
digest = { version = "0.10", default-features = false, features = [
    "rand_core",
    "subtle",
] }

# Storage
embedded-storage = "0.3.1"
embedded-storage-async = "0.4"
esp-storage = { version = "0.8" }
esp-bootloader-esp-idf = { version = "0.4.0" }

# Networking
edge-dhcp = "0.7"
edge-nal = "0.6"
edge-nal-embassy = "0.8"
embassy-net = { version = "0.8", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
smoltcp = { version = "0.12", default-features = false, features = [
    "medium-ethernet",
    "socket-raw",
] }

# Utilities
log = "0.4"
static_cell = { version = "2.1" }
once_cell = { version = "1", features = [
    "critical-section",
], default-features = false }
portable-atomic = "1"
snafu = { version = "0.8", default-features = false }
pastey = "0.1"
pretty-hex = { version = "0.4", default-features = false }
embedded-io-async = "0.7"
embassy-embedded-hal = "0.6"

[dependencies]
ota = { path = "ota" }
ssh-stamp-hal = { path = "ssh-stamp-hal" }

sha2 = { workspace = true }
rustc-hash = { workspace = true }

cfg-if = "1"
ed25519-dalek = { version = "2", default-features = false }
embassy-executor = { workspace = true }
embassy-net = { workspace = true }
smoltcp = { workspace = true }
embassy-time = { workspace = true }
embedded-io-async = { workspace = true }
hex = { version = "0.4", default-features = false }
log = { workspace = true }
ssh-key = { version = "0.6", default-features = false, features = ["ed25519"] }
sunset = { workspace = true }
sunset-async = { workspace = true }
sunset-sshwire-derive = { workspace = true }
sunset-sftp = { workspace = true }
getrandom = { version = "0.2.10", features = ["custom"] }
embassy-sync = { workspace = true }
heapless = { workspace = true }
embassy-futures = { workspace = true }
embedded-storage = { workspace = true }
bcrypt = { workspace = true }
subtle = { workspace = true }
hmac = { workspace = true }
digest = { workspace = true }
embedded-storage-async = { workspace = true }
portable-atomic = { workspace = true }
snafu = { workspace = true }
pastey = { workspace = true }
pretty-hex = { workspace = true }

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = true

[profile.esp32s2]
inherits = "release"
opt-level = "s"

[profile.dev.package.esp-storage]
opt-level = "s"

[profile.dev.package.esp-radio]
opt-level = "s"

[features]
ipv6 = []

# Enables the SFTP OTA Subsystem. Use packer to pack a binary and PUT it over sftp
sftp-ota = []
