# SPDX-FileCopyrightText: 2026 Roman Valls Guimera <brainstorm@nopcode.org>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "ssh-stamp-esp32"
version = "0.2.0"
edition = "2024"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>"]
description = "ESP32 implementation of the ssh-stamp-hal traits and bootable binary for ssh-stamp"
license = "GPL-3.0-or-later"
repository = "https://github.com/brainstorm/ssh-stamp"

[dependencies]
ssh-stamp = { path = ".." }
ssh-stamp-hal = { path = "../ssh-stamp-hal" }
ota = { path = "../ota" }

embassy-sync = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-futures = { workspace = true }
embassy-net = { workspace = true }

edge-dhcp = { workspace = true }
edge-nal = { workspace = true }
edge-nal-embassy = { workspace = true }

heapless = { workspace = true }

esp-hal = { workspace = true }
esp-radio = { version = "0.18", features = ["wifi", "log-04"] }
esp-storage = { version = "0.9" }
esp-bootloader-esp-idf = { version = "0.5" }
esp-alloc = { version = "0.10" }
esp-backtrace = { version = "0.19", features = ["panic-handler", "println"] }
esp-rtos = { version = "0.3", features = ["embassy", "log-04", "esp-radio"] }
esp-println = { version = "0.17", features = ["log-04"] }

embedded-storage = { workspace = true }
embedded-storage-async = { workspace = true }

once_cell = { workspace = true }
sunset-async = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
getrandom = { version = "0.2.10", features = ["custom"] }
log = { workspace = true }
static_cell = { workspace = true }
portable-atomic = { version = "1" }
cfg-if = "1"

[features]
default = ["esp32c6"]
sftp-ota = ["ssh-stamp/sftp-ota"]
ipv6 = ["ssh-stamp/ipv6"]
esp32 = ["esp-hal/esp32", "esp-radio/esp32", "esp-storage/esp32", "esp-bootloader-esp-idf/esp32", "esp-alloc/esp32", "esp-backtrace/esp32", "esp-rtos/esp32", "esp-println/esp32"]
esp32c2 = ["esp-hal/esp32c2", "esp-radio/esp32c2", "esp-storage/esp32c2", "esp-bootloader-esp-idf/esp32c2", "esp-alloc/esp32c2", "esp-backtrace/esp32c2", "esp-rtos/esp32c2", "esp-println/esp32c2"]
esp32c3 = ["esp-hal/esp32c3", "esp-radio/esp32c3", "esp-storage/esp32c3", "esp-bootloader-esp-idf/esp32c3", "esp-alloc/esp32c3", "esp-backtrace/esp32c3", "esp-rtos/esp32c3", "esp-println/esp32c3"]
esp32c6 = ["esp-hal/esp32c6", "esp-radio/esp32c6", "esp-storage/esp32c6", "esp-bootloader-esp-idf/esp32c6", "esp-alloc/esp32c6", "esp-backtrace/esp32c6", "esp-rtos/esp32c6", "esp-println/esp32c6"]
esp32s2 = ["esp-hal/esp32s2", "esp-radio/esp32s2", "esp-storage/esp32s2", "esp-bootloader-esp-idf/esp32s2", "esp-alloc/esp32s2", "esp-backtrace/esp32s2", "esp-rtos/esp32s2", "esp-println/esp32s2"]
esp32s3 = ["esp-hal/esp32s3", "esp-radio/esp32s3", "esp-storage/esp32s3", "esp-bootloader-esp-idf/esp32s3", "esp-alloc/esp32s3", "esp-backtrace/esp32s3", "esp-rtos/esp32s3", "esp-println/esp32s3"]
